<resources>
    <string name="app_name">savingsAndBlown</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="preferenceFileName">GSBPreferences</string>
    <string name="title_activity_banks_overview">Banks</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="url">https://savings.nwgreens.org/</string>
    <string name="currentBalance">Current Balance</string>
    <string name="actualBalance">Actual Balance</string>
    <string name="title_activity_add_transaction">AddTransaction</string>
    <string name="Filter_Transactions" />
    <string name="title_activity_filter_settings">FilterSettings</string>
    <string name="currentOnly">Current Transactions</string>
    <string name="NextSeven">Next 7 Days</string>
    <string name="allTransactions">All Transactions</string>
    <string name="ValueFilter">Display Balance As</string>
    <string name="DateFilter">Show Only</string>
    <string name="AllState">All Transactions</string>
    <string name="Pending">Pending</string>
    <string name="Cleared">Cleared</string>
    <string name="StateFilter">Only in State</string>
    <string name="filter_budgeted">Current Budget Only</string>
    <string name="TransactionDate">Date</string>
    <string name="TransactionAmount">Amount</string>
    <string name="TransactionStatus">Status</string>
    <string name="TransactionType">Type</string>
    <string name="TransactionFlagStatus">Need More Information</string>
    <string name="TransactionBalance">Balance</string>
    <string name="Category">Category</string>
</resources>
